--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,9 @@
     {
       "src": "todo_project/wsgi.py",
       "use": "@vercel/python",
-      "config": { "maxLambdaSize":  "15mb", "runtime":  "python3.9" }
+      "config": { "maxLambdaSize":  "15mb",
+        "pythonVersion": "3.9",
+        "runtime":  "python3.9" }
     }
   ],
   "routes": [
