--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ djangorestframework==3.15.2
 sqlparse==0.5.3
 typing-extensions==4.12.2
 psycopg2-binary==2.9.10
+backports.zoneinfo==0.2.1;python_version<"3.9"
