--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,4 @@ typing-extensions==4.12.2
 psycopg2-binary==2.9.10
 pytest==8.0.0
 pytest-django==4.8.0
-# backports.zoneinfo==0.2.1;python_version<="3.9"
+backports.zoneinfo==0.2.1;python_version<="3.9"
