--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,11 +44,20 @@ jobs:
           # app-dir: ~/project/package-directory/  # If your requirements.txt isn't in the root directory.
           # pip-dependency-file: test-requirements.txt  # if you have a different name for your requirements file, maybe one that combines your runtime and test requirements.
       - run:
+          name: Debug PostgreSQL Logs
+          command: |
+            echo "Checking PostgreSQL logs...";
+            docker logs $(docker ps -q --filter ancestor=postgres:latest)
+      - run:
           name: Wait for PostgreSQL
           command: |
-            until pg_isready -h postgres -p 5432; do
+            for i in {1..10}; do
+              if pg_isready -h postgres -p 5432; then
+                echo "PostgreSQL is ready!";
+                break;
+              fi
               echo "Waiting for PostgreSQL...";
-              sleep 2;
+              sleep 5;
             done
       - run:
           name: Run tests
